# serializer version: 1
# name: test_fujitsu_decode_snapshot
  dict({
    'protocol': dict({
      'confidence': 0.99,
      'manufacturer': 'Fujitsu',
      'name': 'FUJITSU_AC',
    }),
    'state': dict({
      'fan': 'auto',
      'mode': 'auto',
      'power': 'on',
      'swing': 'off',
      'temperature': 17,
    }),
    'success': True,
    'timings': list([
      3294,
      1605,
      517,
      324,
      452,
      392,
      452,
      1216,
      452,
      392,
      452,
      1216,
      517,
      324,
      392,
      392,
      392,
      392,
      452,
      1216,
      452,
      1216,
      452,
      392,
      452,
      392,
      452,
      324,
      452,
      1216,
      392,
      1216,
      452,
      392,
      452,
      392,
      452,
      324,
      452,
      392,
      452,
      392,
      392,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      452,
      392,
      452,
      452,
      392,
      392,
      392,
      1216,
      452,
      324,
      452,
      392,
      452,
      324,
      452,
      392,
      452,
      392,
      392,
      392,
      452,
      452,
      392,
      1216,
      452,
      324,
      452,
      392,
      392,
      452,
      392,
      392,
      392,
      1216,
      452,
      1216,
      392,
      1216,
      392,
      1216,
      452,
      1216,
      452,
      1216,
      392,
      1216,
      392,
      1216,
      452,
      324,
      452,
      392,
      452,
      1216,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      392,
      1216,
      392,
      1216,
      392,
      392,
      452,
      392,
      452,
      1216,
      392,
      452,
      392,
      392,
      392,
      392,
      452,
      324,
      452,
      324,
      452,
      392,
      452,
      1216,
      452,
      324,
      452,
      392,
      452,
      392,
      452,
      392,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      452,
      324,
      452,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      392,
      452,
      452,
      324,
      517,
      324,
      452,
      324,
      452,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      392,
      452,
      392,
      452,
      324,
      452,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      392,
      392,
      452,
      324,
      452,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      392,
      392,
      452,
      1216,
      452,
      392,
      392,
      392,
      392,
      1216,
      392,
      1216,
      392,
      1216,
      392,
      1216,
      392,
      392,
      392,
      1216,
      452,
      392,
      452,
      392,
      392,
    ]),
  })
# ---
# name: test_fujitsu_generate_all_modes_24c_snapshot
  dict({
    'commands': dict({
      'auto': dict({
        'auto': dict({
          '24': 'BeQMQAZYAkADQAMDHAJYAkADQAPgBw9AE0ADQANAG0ADQAtAA0AD4AcPQBNAA0ADQBtAA0ALQANAA+AHD0ATQANAA0AbQANAC0ADQAPgBw9AE0ADQANAG0ADQAtAA0AD4AcPQBNAA0ADQBtAA0ALQANAA+AHD0ATQANAA0AbQANAC0ADQAPgBw9AE0ADQANAG0ADQAtAA0AD4AcPQBNAA0AD',
        }),
      }),
      'cool': dict({
        'auto': dict({
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgCxNAF0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAAw==',
        }),
      }),
      'dry': dict({
        'auto': dict({
          '24': 'BeQMQAZYAkADARwCwAcBWALgAwtAC0ADQANAA0AD4Ccv4Ccv4Ccv4Ccv4Ccv4Ccv4Ccv',
        }),
      }),
      'fan': dict({
        'auto': dict({
          '24': 'BeQMQAZYAkADARwCgAfgAwtAE0ADQANAA0ADQAPgAyPgAwtAG0ADQANAA0ADQAPgAyPgAwtAG0ADQANAA0ADQAPgAyPgAwtAG0ADQANAA0ADQAPgAyPgAwtAG0ADQANAA0ADQAPgAyPgAwtAG0ADQANAA0ADQAPgAyPgAwtAG0ADQANAA0ADQAPgAyPgAwtAG0ADQANAA0ADQAM=',
        }),
      }),
      'heat': dict({
        'auto': dict({
          '24': 'BeQMQAZYAkADAxwCWAJAA8ALwAdAE0ADQANAA0AD4AMbwAvAB0AfQANAA0ADQAPgAxvAC8AHQB9AA0ADQANAA+ADG8ALwAdAH0ADQANAA0AD4AMbwAvAB0AfQANAA0ADQAPgAxvAC8AHQB9AA0ADQANAA+ADG8ALwAdAH0ADQANAA0AD4AMbwAvAB0AfQANAA0ADQAM=',
        }),
      }),
      'off': 'B+QMQAZYAhwCQANAA0ADQAMBWALgDxfgCytAE+AnL+AnL+AnL+AnL+AnL+AnL+ATLw==',
    }),
    'manufacturer': 'Fujitsu',
    'protocol': 'FUJITSU_AC',
    'success': True,
    'totalCommands': 6,
  })
# ---
# name: test_fujitsu_generate_common_temps_snapshot
  dict({
    'commands': dict({
      'cool': dict({
        'auto': dict({
          '22': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AXQANAC0ADQANAA+ALE8AX4Asb4AsT4Ccv4Ccv4Ccv4Ccv4Ccv4BMv',
          '23': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AXQANAA0APQANAA+AHD0ATQANAF0ADQANAD0ADQAPgBw9AE0ADQBdAA0ADQA9AA0AD4AcPQBNAA0AXQANAA0APQANAA+AHD0ATQANAF0ADQANAD0ADQAPgBw9AE0ADQBdAA0ADQA9AA0AD4AcPQBNAA0AXQANAA0APQANAA+AHD0ATQANAF0ADQANAD0ADQAM=',
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgCxNAF0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAAw==',
          '25': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgAxPgAwvgBxtAD0AD4AMj4AML4AcbQA9AA+ADI+ADC+AHG0APQAPgAyPgAwvgBxtAD0AD4AMj4AML4AcbQA9AA+ADI+ADC+AHG0APQAPgAyPgAwvgBxtAD0AD4AMj4AMLQBs=',
          '26': 'BeQMQAZYAkADAxwCWAJAA0ADQAPAE8AHQBNAA0AD4AsTwBPAB0AnQANAA+ALE8ATwAdAJ0ADQAPgCxPAE8AHQCdAA0AD4AsTwBPAB0AnQANAA+ALE8ATwAdAJ0ADQAPgCxPAE8AHQCdAA0AD4AsTwBPAB0AnQANAAw==',
        }),
        'high': dict({
          '22': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AXQAPgAwvAC0AHQANAA0ADQANAK0AD4AMLwAtAB0ADQANAA0ADQCtAA+ADC8ALQAdAA0ADQANAA0ArQAPgAwvAC0AHQANAA0ADQANAK0AD4AMLwAtAB0ADQANAA0ADQCtAA+ADC8ALQAdAA0ADQANAA0ArQAPgAwvAC0AHQANAA0ADQANAK0AD4AMLQAs=',
          '23': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AXQANAA0ADQAPAF0AHQANAA0ADQANAH0ADQANAA0ADwBdAB0ADQANAA0ADQB9AA0ADQANAA8AXQAdAA0ADQANAA0AfQANAA0ADQAPAF0AHQANAA0ADQANAH0ADQANAA0ADwBdAB0ADQANAA0ADQB9AA0ADQANAA8AXQAdAA0ADQANAA0AfQANAA0ADQAPAF0AHQANAA0ADQANAH0ADQANAA0ADQBc=',
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgBxNAD0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA0Ab',
          '25': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgAxNAC0ADQAPgBxtAD0ADwBvAC0APQAPAD0AHQANAA0ADwBvAC0APQAPAD0AHQANAA0ADwBvAC0APQAPAD0AHQANAA0ADwBvAC0APQAPAD0AHQANAA0ADwBvAC0APQAPAD0AHQANAA0ADwBvAC0APQAPAD0AHQANAA0ADwBvAC0APQANADw==',
          '26': 'BeQMQAZYAkADAxwCWAJAA0ADQAPAE8AHQAdAA+ADG0ALQANAA+AHG0APQAPgAxtAC0ADQAPgBxtAD0AD4AMbQAtAA0AD4AcbQA9AA+ADG0ALQANAA+AHG0APQAPgAxtAC0ADQAPgBxtAD0AD4AMbQAtAA0AD4AcbQA9AA+ADG0ALQANAA+AHG0APQANAGw==',
        }),
        'low': dict({
          '22': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AXQANAC0ADwAvAB0ATQANAA0ADQBdAA0ALQAPAC8AHQBNAA0ADQANAF0ADQAtAA8ALwAdAE0ADQANAA0AXQANAC0ADwAvAB0ATQANAA0ADQBdAA0ALQAPAC8AHQBNAA0ADQANAF0ADQAtAA8ALwAdAE0ADQANAA0AXQANAC0ADwAvAB0ATQANAA0ADQBdAA0ALQAPACw==',
          '23': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AXQANAA8APwAdAB0ADQANAA0ADQCdAA0ADwA/AB0AHQANAA0ADQANAJ0ADQAPAD8AHQAdAA0ADQANAA0AnQANAA8APwAdAB0ADQANAA0ADQCdAA0ADwA/AB0AHQANAA0ADQANAJ0ADQAPAD8AHQAdAA0ADQANAA0AnQANAA8APwAdAB0ADQANAA0ADQCdAA0ADwA9ABw==',
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgCxPAE8AHQCdAA0AD4AsTwBPAB0AnQANAA+ALE8ATwAdAJ0ADQAPgCxPAE8AHQCdAA0AD4AsTwBPAB0AnQANAA+ALE8ATwAdAJ0ADQAPgCxPAE8AHQCdAA0AD4AsTwBM=',
          '25': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgAxPAC8AHwAdAJ0ADQAPgAxPAC8AHwAdAJ0ADQAPgAxPAC8AHwAdAJ0ADQAPgAxPAC8AHwAdAJ0ADQAPgAxPAC8AHwAdAJ0ADQAPgAxPAC8AHwAdAJ0ADQAPgAxPAC8AHwAdAJ0ADQAPgAxPAC8AH',
          '26': 'BeQMQAZYAkADAxwCWAJAA0ADQAPAE8AH4AsTQBNAA0ADwCfAB+ALE0ATQANAA8AnwAfgCxNAE0ADQAPAJ8AH4AsTQBNAA0ADwCfAB+ALE0ATQANAA8AnwAfgCxNAE0ADQAPAJ8AH4AsTQBNAA0ADwCfAB+ADEw==',
        }),
      }),
      'heat': dict({
        'auto': dict({
          '22': 'BeQMQAZYAkADAxwCWAJAA+ADC0ALQANAF0ADQANAA+ADE+ADC0ALQANAI0ADQANAA+ADE+ADC0ALQANAI0ADQANAA+ADE+ADC0ALQANAI0ADQANAA+ADE+ADC0ALQANAI0ADQANAA+ADE+ADC0ALQANAI0ADQANAA+ADE+ADC0ALQANAI0ADQANAA+ADE+ADC0ALQANAI0ADQANAAw==',
          '23': 'BeQMQAZYAkADAxwCWAJAA+ADC0ALQANAA0AbQANAA+ADD+ADC0ALQANAA0AnQANAA+ADD+ADC0ALQANAA0AnQANAA+ADD+ADC0ALQANAA0AnQANAA+ADD+ADC0ALQANAA0AnQANAA+ADD+ADC0ALQANAA0AnQANAA+ADD+ADC0ALQANAA0AnQANAA+ADD+ADC0ALQANAA0AnQANAAw==',
          '24': 'BeQMQAZYAkADAxwCWAJAA8ALwAdAE0ADQANAA0AD4AMbwAvAB0AfQANAA0ADQAPgAxvAC8AHQB9AA0ADQANAA+ADG8ALwAdAH0ADQANAA0AD4AMbwAvAB0AfQANAA0ADQAPgAxvAC8AHQB9AA0ADQANAA+ADG8ALwAdAH0ADQANAA0AD4AMbwAvAB0AfQANAA0ADQAM=',
          '25': 'BeQMQAZYAkADAxwCWAJAA8ALwAfgAxNAC0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAAw==',
          '26': 'BeQMQAZYAkADAxwCWAJAA8ALwAfAB0AbQANAA+ADE8ALwAfAB0AnQANAA+ADE8ALwAfAB0AnQANAA+ADE8ALwAfAB0AnQANAA+ADE8ALwAfAB0AnQANAA+ADE8ALwAfAB0AnQANAA+ADE8ALwAfAB0AnQANAA+ADE8ALwAfAB0AnQANAAw==',
        }),
        'high': dict({
          '22': 'BeQMQAZYAkADAxwCWAJAA+ADC0ALQAPAF+ADC0ATQAPAE8ALwA9AB0ADwBdAB0ADwBPAC8APQAdAA8AXQAdAA8ATwAvAD0AHQAPAF0AHQAPAE8ALwA9AB0ADwBdAB0ADwBPAC8APQAdAA8AXQAdAA8ATwAvAD0AHQAPAF0AHQAPAE8ALwA9AB0ADQBc=',
          '23': 'BeQMQAZYAkADAxwCWAJAA+ADC0ALQANAA0ADQAPgCyNAE0ADQB9AA0ADQANAA8AXQAdAA8ATwAtAD0ADQANAA8AXQAdAA8ATwAtAD0ADQANAA8AXQAdAA8ATwAtAD0ADQANAA8AXQAdAA8ATwAtAD0ADQANAA8AXQAdAA8ATwAtAD0ADQANAA8AXQAdAA8ATwAtAD0ADQANAA0AX',
          '24': 'BeQMQAZYAkADAxwCWAJAA8ALwAdAE0ADQA9AA8ALQAdAA+ALE8AX4Asb4AsT4Ccv4Ccv4Ccv4Ccv4Ccv4Acv',
          '25': 'BeQMQAZYAkADAxwCWAJAA8ALwAfAE0APQAPAD0AHQAPgCxNAE0ADQAPgAyPgAwvAG8ATQA9AA8APQAdAA+ALE0ATQANAA+ADI+ADC8AbwBNAD0ADwA9AB0AD4AsTQBNAA0AD4AMj4AMLwBvAE0APQAPAD0AHQAPgCxNAE0ADQANAIw==',
          '26': 'BeQMQAZYAkADAxwCWAJAA8ALwAfAB0AHQAPgAyPgAwvgBxtAD0AD4AMj4AML4AcbQA9AA+ADI+ADC+AHG0APQAPgAyPgAwvgBxtAD0AD4AMj4AML4AcbQA9AA+ADI+ADC+AHG0APQAPgAyPgAwvgBxtAD0ADQCM=',
        }),
        'low': dict({
          '22': 'BeQMQAZYAkADAxwCWAJAA+ADC0ALQANAF0ADwAvAB+ADE8AL4Asb4AsT4Ccv4Ccv4Ccv4Ccv4Ccv4BMv',
          '23': 'BeQMQAZYAkADAxwCWAJAA+ADC0ALQANAA+ADG8AP4AMTwAtAG0ADwA/AB0AHQAPAG8ALQA9AA8APwAdAB0ADwBvAC0APQAPAD8AHQAdAA8AbwAtAD0ADwA/AB0AHQAPAG8ALQA9AA8APwAdAB0ADwBvAC0APQAPAD8AHQAdAA8AbwAtAD0ADwA9ABw==',
          '24': 'BeQMQAZYAkADAxwCWAJAA8ALwAdAE0ADQAPAE8AH4AsTQBNAA0ADwCfAB+ALE0ATQANAA8AnwAfgCxNAE0ADQAPAJ8AH4AsTQBNAA0ADwCfAB+ALE0ATQANAA8AnwAfgCxNAE0ADQAPAJ8AH4AsTQBNAA0ADwCc=',
          '25': 'BeQMQAZYAkADAxwCWAJAA8ALwAfgCxPgExvgJy/gJy/gJy/gJy/gJy/gJy/gCy8=',
          '26': 'BeQMQAZYAkADAxwCWAJAA8ALwAfAB+ALG+ALE+AnL+AnL+AnL+AnL+AnL+AnL+ALLw==',
        }),
      }),
      'off': 'B+QMQAZYAhwCQANAA0ADQAMBWALgDxfgCytAE+AnL+AnL+AnL+AnL+AnL+AnL+ATLw==',
    }),
    'manufacturer': 'Fujitsu',
    'protocol': 'FUJITSU_AC',
    'success': True,
    'totalCommands': 31,
  })
# ---
# name: test_fujitsu_generate_cool_auto_snapshot
  dict({
    'commands': dict({
      'cool': dict({
        'auto': dict({
          '18': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALGw==',
          '19': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0ADQBtAA0ALQANAA+AHD0ATQANAA0AbQANAC0ADQAPgBw9AE0ADQANAG0ADQAtAA0AD4AcPQBNAA0ADQBtAA0ALQANAA+AHD0ATQANAA0AbQANAC0ADQAPgBw9AE0ADQANAG0ADQAtAA0AD4AcPQBNAA0ADQBtAA0ALQANAA+AHD0ATQANAA0AbQANAC0ADQAM=',
          '20': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA+APF+APF+APF+APF+APF+APF+APF+APF+APF+APF+APF+APF+APF+APF+APFw==',
          '21': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA8AXwAdAE0AD4AcPQBNAA8AXwAdAE0AD4AcPQBNAA8AXwAdAE0AD4AcPQBNAA8AXwAdAE0AD4AcPQBNAA8AXwAdAE0AD4AcPQBNAA8AXwAdAE0AD4AcPQBNAA8AXwAdAE0AD4AcPQBNAA8AXwAdAE0AD',
          '22': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AXQANAC0ADQANAA+ALE8AX4Asb4AsT4Ccv4Ccv4Ccv4Ccv4Ccv4BMv',
          '23': 'BeQMQAZYAkADAxwCWAJAA0ADQANAA0AXQANAA0APQANAA+AHD0ATQANAF0ADQANAD0ADQAPgBw9AE0ADQBdAA0ADQA9AA0AD4AcPQBNAA0AXQANAA0APQANAA+AHD0ATQANAF0ADQANAD0ADQAPgBw9AE0ADQBdAA0ADQA9AA0AD4AcPQBNAA0AXQANAA0APQANAA+AHD0ATQANAF0ADQANAD0ADQAM=',
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgCxNAF0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAAw==',
          '25': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgAxPgAwvgBxtAD0AD4AMj4AML4AcbQA9AA+ADI+ADC+AHG0APQAPgAyPgAwvgBxtAD0AD4AMj4AML4AcbQA9AA+ADI+ADC+AHG0APQAPgAyPgAwvgBxtAD0AD4AMj4AMLQBs=',
          '26': 'BeQMQAZYAkADAxwCWAJAA0ADQAPAE8AHQBNAA0AD4AsTwBPAB0AnQANAA+ALE8ATwAdAJ0ADQAPgCxPAE8AHQCdAA0AD4AsTwBPAB0AnQANAA+ALE8ATwAdAJ0ADQAPgCxPAE8AHQCdAA0AD4AsTwBPAB0AnQANAAw==',
          '27': 'BeQMQAZYAkADAxwCWAJAA0ADQAPAE0AHQANAE0ADQAPgBw/gAxNAG0ADQBNAA0AD4AcP4AMTQBtAA0ATQANAA+AHD+ADE0AbQANAE0ADQAPgBw/gAxNAG0ADQBNAA0AD4AcP4AMTQBtAA0ATQANAA+AHD+ADE0AbQANAE0ADQAPgBw/gAxNAG0ADQBNAA0AD',
          '28': 'BeQMQAZYAkADAxwCWAJAA0ADQANAE0ADQAtAA0ADQANAA+ALF0ATQANAH0ADQANAA0AD4AsXQBNAA0AfQANAA0ADQAPgCxdAE0ADQB9AA0ADQANAA+ALF0ATQANAH0ADQANAA0AD4AsXQBNAA0AfQANAA0ADQAPgCxdAE0ADQB9AA0ADQANAA+ALF0ATQANAH0ADQANAA0AD',
          '29': 'BeQMQAZYAkADAxwCWAJAA0ADQANAE0ADwAtAB0ADQAPAF0ALQANAA0ATQAPAC0AHQANAA8AXQAtAA0ADQBNAA8ALQAdAA0ADwBdAC0ADQANAE0ADwAtAB0ADQAPAF0ALQANAA0ATQAPAC0AHQANAA8AXQAtAA0ADQBNAA8ALQAdAA0ADwBdAC0ADQANAE0ADwAtAB0ADQAPAF0ALQANAA0ATQAPAC0AHQANAAw==',
          '30': 'BeQMQAZYAkADAxwCWAJAA0ADQANAE0ADQANAD0ADQANAA+ALE0ATQANAA0AjQANAA0AD4AsTQBNAA0ADQCNAA0ADQAPgCxNAE0ADQANAI0ADQANAA+ALE0ATQANAA0AjQANAA0AD4AsTQBNAA0ADQCNAA0ADQAPgCxNAE0ADQANAI0ADQANAA+ALE0ATQANAA0AjQANAA0AD',
        }),
      }),
      'off': 'B+QMQAZYAhwCQANAA0ADQAMBWALgDxfgCytAE+AnL+AnL+AnL+AnL+AnL+AnL+ATLw==',
    }),
    'manufacturer': 'Fujitsu',
    'protocol': 'FUJITSU_AC',
    'success': True,
    'totalCommands': 14,
  })
# ---
# name: test_fujitsu_generate_fan_speeds_24c_cool_snapshot
  dict({
    'commands': dict({
      'cool': dict({
        'auto': dict({
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgCxNAF0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAAw==',
        }),
        'high': dict({
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgBxNAD0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA0Ab',
        }),
        'low': dict({
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgCxPAE8AHQCdAA0AD4AsTwBPAB0AnQANAA+ALE8ATwAdAJ0ADQAPgCxPAE8AHQCdAA0AD4AsTwBPAB0AnQANAA+ALE8ATwAdAJ0ADQAPgCxPAE8AHQCdAA0AD4AsTwBM=',
        }),
        'medium': dict({
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgBxPgAw/gAwtAK0AD4AcT4AMP4AMLQCtAA+AHE+ADD+ADC0ArQAPgBxPgAw/gAwtAK0AD4AcT4AMP4AMLQCtAA+AHE+ADD+ADC0ArQAPgBxPgAw/gAwtAK0AD4AcT4AMP',
        }),
        'quiet': dict({
          '24': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgCxNAF0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAAw==',
        }),
      }),
      'off': 'B+QMQAZYAhwCQANAA0ADQAMBWALgDxfgCytAE+AnL+AnL+AnL+AnL+AnL+AnL+ATLw==',
    }),
    'manufacturer': 'Fujitsu',
    'protocol': 'FUJITSU_AC',
    'success': True,
    'totalCommands': 6,
  })
# ---
# name: test_fujitsu_identify_snapshot
  dict({
    'capabilities': dict({
      'fanSpeeds': list([
        'auto',
        'low',
        'medium',
        'high',
      ]),
      'features': list([
        'swing',
      ]),
      'modes': list([
        'cool',
        'heat',
        'dry',
        'fan',
        'auto',
      ]),
      'tempRange': dict({
        'max': 30,
        'min': 16,
        'unit': 'celsius',
      }),
    }),
    'detectedState': dict({
      'fan': 'auto',
      'mode': 'auto',
      'power': 'on',
      'swing': 'off',
      'temperature': 17,
    }),
    'manufacturer': 'Fujitsu',
    'modelFamily': None,
    'protocol': 'FUJITSU_AC',
    'success': True,
  })
# ---
# name: test_fujitsu_roundtrip_validation
  dict({
    'identified_manufacturer': 'Fujitsu',
    'identified_protocol': 'FUJITSU_AC',
    'original_code': 'Ed4MRQYFAkQBxAGIAcQBwATEAYAHQBMAiKABA8QBwASAA0ALQAMGRAHEAcAEiCADA8QBiAGAA0ATgAvAAUAPQAFAB4ADAsQBiGABQDfAL8AHAIhgAQDEIAEBiAHgAR8BiAFAD0ABQBMBwARAB0ADQAtAA0ALQAMBxAHARwjABIgBiAHEAYhgAUAH4AcDAYgBQCNAAwGIAYAbQAsCxAGIoAEBxAFAS0ADQAsDwATEAcALQA8AiKABwAlABwHEAYAhQAECxAGIYAFAB+ADA4ABQBGAAQDEIAEBRAFBZ0AHAsQBiCABgAUBiAGAB0AFAcQBgBsCxAGIYAHAB0ABAcQB4BMbQLcAiKABAcAE4AUDQAELwATEAYgBxAGIAYgB',
    'original_code_matches_generated': False,
    'original_code_timings_count': 259,
    'sample_decoded_protocol': dict({
      'confidence': 1.0,
      'manufacturer': 'Fujitsu',
      'name': 'FUJITSU_AC',
    }),
    'sample_generated_code_cool_24_auto': 'BeQMQAZYAkADAxwCWAJAA0ADQAPgCxNAF0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAA+ALG+ALE0ArQAPgCxvgCxNAK0AD4Asb4AsTQCtAAw==',
    'sample_generated_timings_count': 195,
    'total_generated_commands': 301,
    'workflow_validation': dict({
      'both_same_protocol': True,
      'generated_decodes_correctly': True,
      'original_identifies_correctly': True,
    }),
  })
# ---
